<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自动外卖机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="status_send">发射状态</string>
    <string name="status_receive">接收状态</string>
    <string name="status_send_dp">发射电平</string>
    <string name="status_receive_dp">接收电平</string>
    <string name="status_xddk">信道带宽</string>
    <string name="status_tzfs">调制方式</string>
    <string name="status_xdsl">信道速率</string>
    <string name="status_running">运行状态</string>
    <string name="status_wd">温度</string>
    <string name="status_yxsj">运行时间</string>
    <string name="status_fdsz">幅度失真</string>
    <string name="status_xwsz">相位失真</string>
    <string name="status_fbmwml">非编码误码率</string>
    <string name="status_bmwml">编码误码率</string>
    <string name="status_loc_info">站点信息</string>
    <string name="status_zd">站点</string>
    <string name="status_bh">编号</string>
    <string name="status_jd">经度</string>
    <string name="status_wd_loc">纬度</string>
    <string name="status_glip">管理IP</string>
    <string name="status_mac">MAC地址</string>
    
    <string name="net_subsystem">Ethernet subsystem</string>
    <string name="net_ethn_version1">Eth version</string>
	<string name="net_ethn_version2">Eth version 2</string>
	<string name="net_rx_buffer_size">RX buffer size</string>
	<string name="net_tx_buffer_size">TX buffer size</string>
	<string name="net_local_loopback_enable">Local loopback enable</string>
	<string name="net_loop_data_enable_override">Loop data enable override</string>
	<string name="net_xon_threshold">XON threshold</string>
	<string name="net_xoff_threshold">XOFF threshold</string>
	<string name="net_xoff_rerequeset_timer">XOFF rerequest timer</string> 
	<string name="net_pause_quanta">Pause quanta</string>
	
	<string name="net_rx_packets_detected">RX packets detected</string>
	<string name="net_rx_packets_dropped">RX packets dropped</string>
	<string name="net_tx_packets_detected">TX packets detected</string>
	<string name="net_tx_packets_dropped">TX packets dropped</string>
	
	<string name="net_Mode">Tri-Mode Ethernet MAC</string>
	<string name="net_mac_version1">MAC version</string>
	<string name="net_mac_version2">MAC version2</string>
	<string name="net_jumbo_frame_enable1">Jumbo frame enable1</string>
	<string name="net_jumbo_frame_enable2">Jumbo frame enable2</string>
	<string name="net_vlan_enable1">Vlan enable1</string>
	<string name="net_vlan_enable2">Vlan enable2</string>
	<string name="net_rx_flow_control_enable">RX flow control enable</string>
	<string name="net_tx_flow_control_enable">TX flow control enable</string>
	<string name="net_max_frame_enable1">MAX frame enable1</string>
	<string name="net_max_frame_enable2">MAX frame enable2</string>
	<string name="net_max_frame_size1">MAX frame size1</string>
	<string name="net_max_frame_size2">MAX frame size2</string>
	
	<string name="net_rx_bytes">RX bytes</string>
	<string name="net_rx_good_frames">RX good frames</string>
	<string name="net_rx_crc_errors">RX crc errors</string>
	<string name="net_rx_length_errors">RX length errors</string>
	<string name="net_rx_pause_frames">RX pause frames</string>
	<string name="net_tx_bytes">TX bytes</string>
	<string name="net_tx_good_frames">TX good frames</string>
	<string name="net_tx_urun_errors">TX urun errors</string>
	<string name="net_tx_pause_frames">TX pause frames</string>

</resources>
