<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_send"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="#29242c"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:textSize="@dimen/status_title_size" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_send_dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_xddk"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_tzfs"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_xdsl"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_receive"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="#29242c"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:textSize="@dimen/status_title_size" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_receive_dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_xddk"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_tzfs"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_xdsl"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_running"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="#29242c"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:textSize="@dimen/status_title_size" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_wd"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_yxsj"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_fdsz"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_xwsz"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_fbmwml"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bmwml"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_loc_info"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="#29242c"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:textSize="@dimen/status_title_size" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_zd"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_bh"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_jd"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_wd_loc"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_glip"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_mac"
                android:textColor="#ffffff"
                android:textSize="@dimen/status_item_size" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>